.provarCaches/00D5h000009Q6XQEA0/objects/provar__Code_Scan_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>provar__Code_Analysis_Tool__c</fullName>
        <label>Code Scanning Tool</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Code_Analysis_Tools</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Days_of_the_Week__c</fullName>
        <label>Days of the Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Days_of_the_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Frequency__c</fullName>
        <label>Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__System__c</fullName>
        <label>System</label>
        <referenceTo>provar__System__c</referenceTo>
        <relationshipLabel>Code Scan Schedules</relationshipLabel>
        <relationshipName>Code_Scan_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <label>Code Scan Schedule</label>
    <nameField>
        <displayFormat>CSSCH-{000000}</displayFormat>
        <label>Code Scan Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Scan Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>provar__Time_is_required_when_frequency_is_Daily</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(TEXT(provar__Frequency__c))) &amp;&amp; ISBLANK( provar__Time__c )</errorConditionFormula>
        <errorMessage>Time must be defined when a frequency is chosen.</errorMessage>
    </validationRules>
</CustomObject>